Service.yml
kind: Service
apiVersion: v1
metadata:
  annotations:
    app.openshift.io/vcs-ref: ''
    app.openshift.io/vcs-uri: 'https://github.com/openshift-katacoda/blog-django-py.git'
    openshift.io/generated-by: OpenShiftWebConsole
  selfLink: /api/v1/namespaces/fiap-hamses-6aso/services/blog-hms-py-git
  resourceVersion: '27523755'
  name: blog-hms-py-git
  uid: 02c8c3ac-b4ce-448a-822c-cfec3128605
  creationTimestamp: '2022-01-21T23:09:21Z'
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: v1
      time: '2022-01-21T23:09:21Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:app.openshift.io/vcs-ref': {}
            'f:app.openshift.io/vcs-uri': {}
            'f:openshift.io/generated-by': {}
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/name': {}
            'f:app.kubernetes.io/part-of': {}
            'f:app.openshift.io/runtime': {}
            'f:app.openshift.io/runtime-version': {}
        'f:spec':
          'f:ports':
            .: {}
            'k:{"port":8080,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
          'f:selector':
            .: {}
            'f:app': {}
            'f:deploymentconfig': {}
          'f:sessionAffinity': {}
          'f:type': {}
  namespace: fiap-hamses-6aso
  labels:
    app: blog-hms-py-git
    app.kubernetes.io/component: blog-hms-py-git
    app.kubernetes.io/instance: blog-hms-py-git
    app.kubernetes.io/name: python
    app.kubernetes.io/part-of: blog-hms-py-git-app
    app.openshift.io/runtime: python
    app.openshift.io/runtime-version: 3.8-ubi7
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: blog-hms-py-git
    deploymentconfig: blog-hms-py-git
  clusterIP: 172.30.100.59
  type: ClusterIP
  sessionAffinity: None
status:
  loadBalancer: {}
