Route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    openshift.io/host.generated: 'true'
  selfLink: >-
    /apis/route.openshift.io/v1/namespaces/fiap-hamses-6aso/routes/blog-hms-py-git
  resourceVersion: '27523768'
  name: blog-hms-py-git
  uid: 42b2ed27-13b2-45fd-b5b6-92759ec98605
  creationTimestamp: '2022-01-21T23:09:21Z'
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2022-01-21T23:09:21Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/name': {}
            'f:app.kubernetes.io/part-of': {}
            'f:app.openshift.io/runtime': {}
            'f:app.openshift.io/runtime-version': {}
        'f:spec':
          'f:port':
            .: {}
            'f:targetPort': {}
          'f:to':
            'f:kind': {}
            'f:name': {}
            'f:weight': {}
          'f:wildcardPolicy': {}
    - manager: openshift-router
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2022-01-21T23:09:22Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:status':
          'f:ingress': {}
  namespace: fiap-hamses-6aso
  labels:
    app: blog-hms-py-git
    app.kubernetes.io/component: blog-hms-py-git
    app.kubernetes.io/instance: blog-hms-py-git
    app.kubernetes.io/name: python
    app.kubernetes.io/part-of: blog-hms-py-git-app
    app.openshift.io/runtime: python
    app.openshift.io/runtime-version: 3.8-ubi7
spec:
  host: blog-hms-py-git-fiap-hamses-6aso.apps.na46.prod.nextcle.com
  to:
    kind: Service
    name: blog-hms-py-git
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
status:
  ingress:
    - host: blog-hms-py-git-fiap-hamses-6aso.apps.na46.prod.nextcle.com
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
          lastTransitionTime: '2022-01-21T23:09:22Z'
      wildcardPolicy: None
      routerCanonicalHostname: apps.na46.prod.nextcle.com
